--- a/apple-pie/styles/style.css
+++ b/apple-pie/styles/style.css
@@ -22,3 +22,74 @@ body {
 
 /* STYLES */
 /* Write your CSS below */
+
+
+
+.column {
+  display: flex;
+  flex-direction: column;
+  margin-left: 350px;
+  
+}
+
+
+.top {
+  background-image: url("../images/apple-pie.jpg");
+  background-position:0% 50%;
+  background-size: cover;
+  
+  height: 650px;
+  position: relative;
+  width: 800px;
+  height: 400px;
+  
+}
+
+.title-container{
+  position: absolute;
+  top: 45%;
+  left:38%;
+  font-size: 50px;
+  color: white;
+}
+
+
+.boxes {
+  display: flex;
+  align-items: start;
+  flex-direction: column;
+  width: 800px;
+  padding:20px 110px;
+  
+  font-family:Arial, Helvetica, sans-serif;
+  line-height: 20px;
+}
+
+.boxes div {
+  display: flex;
+  justify-content: center;
+}
+
+hr {
+  width:100%;
+  border-top: 1px solid grey;
+}
+
+img {
+  margin-top:20px;
+  width: 70%;
+}
+
+ul {
+  list-style-type:none;
+  
+}
+ul li:before{ 
+  content:"- ";
+  
+}
+ 
+p {
+
+  margin: 20px 0px;
+}
